@@ -1,3 +1,6 @@
-Options -t, -c and -f added
+Bugfix release.  Did not work any more without option -c
 
-Please ignore "ptybufferconnect", this is not ready yet.
+If option -d is present ptybuffer now returns the exit status of the
+child.  Else you can only see it in the log (option -l).
+
+Still please ignore "ptybufferconnect", this is not ready yet.
